ALBS-549: Updated errata page temlpate to use assets from errata_index

--- a/alws/utils/templates/errata_alma_page.j2
+++ b/alws/utils/templates/errata_alma_page.j2
@@ -3,11 +3,11 @@
 <head>
     <meta content="text/html; charset="UTF-8">
     <title>{{ errata['updateinfo_id'] }}</title>
-    <link rel="stylesheet" href="misc/static/foundation.min.css">
-    <link rel="stylesheet" href="misc/static/images-style.css">
-    <link rel="shortcut icon" type="image/png" href="misc/static/hero-img.png">
-    <script src="misc/static/jquery.js" type="text/javascript"></script>
-    <script src="misc/static/foundation.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="../assets/foundation.min.css">
+    <link rel="stylesheet" href="../assets/images-style.css">
+    <link rel="shortcut icon" type="image/png" href="../assets/static/hero-img.png">
+    <script src="../assets/jquery.js" type="text/javascript"></script>
+    <script src="../assets/foundation.min.js" type="text/javascript"></script>
     <script>
       $(function () {
         $(document).foundation();
@@ -21,7 +21,7 @@
         <div class="small-12 columns text-center" style="display: inline-block;">
             <ul class="no-bullet header-container">
                 <li>
-                    <img class="header-logo" src="misc/static/almalinux-logo.png" alt="AlmaLinux"></li>
+                    <img class="header-logo" src="../assets/almalinux-logo.png" alt="AlmaLinux"></li>
                 <li>
             </ul>
         </div>
