ALBS-570: Updated errata page template to fix a wrong ref to an asset

--- a/alws/utils/templates/errata_alma_page.j2
+++ b/alws/utils/templates/errata_alma_page.j2
@@ -5,7 +5,7 @@
     <title>{{ errata['updateinfo_id'] }}</title>
     <link rel="stylesheet" href="../assets/foundation.min.css">
     <link rel="stylesheet" href="../assets/images-style.css">
-    <link rel="shortcut icon" type="image/png" href="../assets/static/hero-img.png">
+    <link rel="shortcut icon" type="image/png" href="../assets/hero-img.png">
     <script src="../assets/jquery.js" type="text/javascript"></script>
     <script src="../assets/foundation.min.js" type="text/javascript"></script>
     <script>
