--- a/alws/utils/templates/errata_alma_page.j2
+++ b/alws/utils/templates/errata_alma_page.j2
@@ -5,12 +5,15 @@
     <title>{{ errata['updateinfo_id'] }}</title>
     <link rel="stylesheet" href="../assets/foundation.min.css">
     <link rel="stylesheet" href="../assets/images-style.css">
+    <link rel="stylesheet" href="../assets/theme.default.min.css">
     <link rel="shortcut icon" type="image/png" href="../assets/hero-img.png">
     <script src="../assets/jquery.js" type="text/javascript"></script>
+    <script src="../assets/jquery.tablesorter.min.js" type="text/javascript"></script>
     <script src="../assets/foundation.min.js" type="text/javascript"></script>
     <script>
       $(function () {
         $(document).foundation();
+        $('.sort-table').tablesorter({sortList: [[0,0]]});
       });
     </script>
 </head>
@@ -30,9 +33,7 @@
 </div>
 
 
-<div class="tabs-content" data-tabs-content="images-tabs">
-
-    <div class="tabs-panel row is-active">
+    <div class="row">
         <div class="row card">
             <div class="medium-12 columns card-header">
                 <h5>[{{ errata['updateinfo_id'] }}] {{ errata['title'] }}</h5>
@@ -88,27 +89,33 @@
                 {% endif %}
 
                 <div class="row">
-                    <div class="medium-3 columns text-left">
-                        <strong>Updated packages:</strong>
-                    </div>
-                    <div class="medium-9 columns">
-                        <ul style="list-style: none; margin-left: 0;"
-                            class="package_list">
-                            {% for pkg in errata['pkglist']['packages'] %}
-                            <li name="{{ pkg['name']}}"
-                                version="{{ pkg['version']}}"
-                                epoch="{{ pkg['epoch']}}"
-                                release="{{ pkg['release']}}"
-                                arch="{{ pkg['arch']}}">
-                                {{ pkg['filename'] }}<br/>
-                                <span class="checksum">
-                                    {{ pkg['checksum'] }}
-                                </span>
-                            </li>
-                            {% endfor %}
-                        </ul>
+                    <div class="medium-12 columns text-left">
+                        <strong>Updated packages listed below:</strong>
                     </div>
                 </div>
+
+		<div class="row">
+                    <div class="medium-12 columns text-left">
+                        <table class="sort-table tablesorter">
+				<thead>
+					<tr>
+					<td>Architecture</td>
+					<td>Package</td>
+					<td>Checksum</td>
+					</tr>
+				</thead>
+				<tbody>
+				{% for pkg in errata['pkglist']['packages'] %}
+					<tr>
+						<td>{{ pkg['arch'] }}</td>
+						<td>{{ pkg['filename'] }}</td>
+						<td>{{ pkg['check'] }}</td>
+					</tr>
+				{% endfor %}
+				</tbody>
+			</table>
+		    </div>
+		</div>
 
                 <div class="row">
                     <div class="medium-3 columns text-left">
@@ -121,6 +128,5 @@
             </div>
         </div>
     </div>
-</div>
 </body>
 </html>
