errata: fix html syntax error

--- a/alws/utils/templates/errata_alma_page.j2
+++ b/alws/utils/templates/errata_alma_page.j2
@@ -24,8 +24,8 @@
         <div class="small-12 columns text-center" style="display: inline-block;">
             <ul class="no-bullet header-container">
                 <li>
-                    <img class="header-logo" src="../assets/almalinux-logo.png" alt="AlmaLinux"></li>
-                <li>
+                    <img class="header-logo" src="../assets/almalinux-logo.png" alt="AlmaLinux">
+		</li>
             </ul>
         </div>
 
