errata: apply formatter on html template

--- a/alws/utils/templates/errata_alma_page.j2
+++ b/alws/utils/templates/errata_alma_page.j2
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>{{ errata['updateinfo_id'] }}</title>
@@ -11,26 +12,30 @@
     <script src="../assets/jquery.tablesorter.min.js" type="text/javascript"></script>
     <script src="../assets/foundation.min.js" type="text/javascript"></script>
     <script>
-      $(function () {
-        $(document).foundation();
-        $('.sort-table').tablesorter({sortList: [[0,0]]});
-      });
+        $(function() {
+            $(document).foundation();
+            $('.sort-table').tablesorter({
+                sortList: [
+                    [0, 0]
+                ]
+            });
+        });
     </script>
 </head>
 
 <body>
-<div class="expanded row header" style="border-bottom: 1px solid lightgrey;">
-    <div class="row expanded">
-        <div class="small-12 columns text-center" style="display: inline-block;">
-            <ul class="no-bullet header-container">
-                <li>
-                    <img class="header-logo" src="../assets/almalinux-logo.png" alt="AlmaLinux">
-		</li>
-            </ul>
-        </div>
+    <div class="expanded row header" style="border-bottom: 1px solid lightgrey;">
+        <div class="row expanded">
+            <div class="small-12 columns text-center" style="display: inline-block;">
+                <ul class="no-bullet header-container">
+                    <li>
+                        <img class="header-logo" src="../assets/almalinux-logo.png" alt="AlmaLinux">
+                    </li>
+                </ul>
+            </div>
 
+        </div>
     </div>
-</div>
 
 
     <div class="row">
@@ -67,8 +72,7 @@
                     <div class="medium-3 columns text-left">
                         <strong>Description:</strong>
                     </div>
-                    <div style="white-space: pre-wrap; vertical-align: top;"
-                         class="medium-9 columns description">{{ errata['description'] }}</div>
+                    <div style="white-space: pre-wrap; vertical-align: top;" class="medium-9 columns description">{{ errata['description'] }}</div>
                 </div>
                 {% if errata['references'] %}
                 <div class="row">
@@ -94,28 +98,28 @@
                     </div>
                 </div>
 
-		<div class="row">
+                <div class="row">
                     <div class="medium-12 columns text-left">
                         <table class="sort-table tablesorter">
-				<thead>
-					<tr>
-					<td>Architecture</td>
-					<td>Package</td>
-					<td>Checksum</td>
-					</tr>
-				</thead>
-				<tbody>
-				{% for pkg in errata['pkglist']['packages'] %}
-					<tr>
-						<td>{{ pkg['arch'] }}</td>
-						<td>{{ pkg['filename'] }}</td>
-						<td>{{ pkg['check'] }}</td>
-					</tr>
-				{% endfor %}
-				</tbody>
-			</table>
-		    </div>
-		</div>
+                            <thead>
+                                <tr>
+                                    <td>Architecture</td>
+                                    <td>Package</td>
+                                    <td>Checksum</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for pkg in errata['pkglist']['packages'] %}
+                                <tr>
+                                    <td>{{ pkg['arch'] }}</td>
+                                    <td>{{ pkg['filename'] }}</td>
+                                    <td>{{ pkg['check'] }}</td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
 
                 <div class="row">
                     <div class="medium-3 columns text-left">
@@ -124,9 +128,10 @@
                     <div class="medium-9 columns">
                         This page is generated automatically from <a href="https://www.redhat.com/security/data/oval/v2/">Red Hat security data</a> and has not been checked for errors. For clarification or corrections please contact the <a href="mailto:packager@almalinux.org">AlmaLinux Packaging Team</a>.
                     </div>
-            </div>
+                </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
